--- a/Pages/Admin/GenerateBills.cshtml
+++ b/Pages/Admin/GenerateBills.cshtml
@@ -336,7 +336,7 @@
         }
 
         .generate-table-head {
-            background-color: #F3F6F1;
+            background-color: #F3F6I1;
             color: #2C2C2C;
         }
 
