--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -106,6 +106,7 @@
            <script src="~/js/loading-overlay.js" asp-append-version="true"></script>
            <script src="~/js/page-enhancements.js" asp-append-version="true"></script>
            <script src="~/js/site.js" asp-append-version="true"></script>
+           <script src="~/js/flatpickr-init.js" asp-append-version="true"></script>
            <script src="~/js/theme-switcher.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
