--- a/Pages/Admin/ManageLeases.cshtml
+++ b/Pages/Admin/ManageLeases.cshtml
@@ -267,7 +267,7 @@
                                 <i class="bi bi-calendar-event me-1"></i>Lease Start Date
                             </label>
                             <input asp-for="LeaseInput.LeaseStart" 
-                                   type="date" 
+                                   type="text" 
                                    class="form-control" 
                                    required />
                             <span asp-validation-for="LeaseInput.LeaseStart" class="text-danger small"></span>
@@ -277,7 +277,7 @@
                                 <i class="bi bi-calendar-x me-1"></i>Lease End Date
                             </label>
                             <input asp-for="LeaseInput.LeaseEnd" 
-                                   type="date" 
+                                   type="text" 
                                    class="form-control" 
                                    required />
                             <span asp-validation-for="LeaseInput.LeaseEnd" class="text-danger small"></span>
